--- a/public/analytics.html
+++ b/public/analytics.html
@@ -30,6 +30,6 @@
     <small>Chart shows daily totals. You can adjust the aggregation in analytics.js</small>
   </footer>
 
-  <script type="module" src="analytics.js"></script>
+  <script type="module" src="analytics2.js"></script>
 </body>
 </html>
